--- a/public/views/index.html
+++ b/public/views/index.html
@@ -23,22 +23,17 @@
          <!--main div-->
 
         <!-- photos on browser -->
-    <div ng-repeat="item in GC.cast" class="col-md-4 photoDiv">
+    <div ng-repeat="item in GC.cast" class="col-md-3 photoDiv" class="photo">
         <!--ng repeat div -->
-    <div class="photo">
+    <div class="photo div">
         <p>{{item.name}}</p>
-        <p ng-hide='item.view' ng-click='GC.togglePic( $index )'> {{item.role}} </p>
-        <p><img ng-src="{{item.imageUrl}}" ng-show='item.view' ng-click='GC.togglePic ( $index )' class="img-responsive center-block"
+        <p ng-hide='item.view' ng-click='GC.togglePic( $index )'> 
+            {{item.role}} </p>
+        <p><img ng-src="{{item.imageUrl}}" ng-show='item.view' ng-click='GC.togglePic ( $index )' 
+            class="img-responsive center-block"
             width="100%" /></p>
     </div>
-    <br>
-    <div class="button">
-            <button ng-click="count = count + 1" ng-init="count=0">
-              Like
-            </button>
-            <span>
-              count: {{count}}
-            </span>
-      </div>
+    
+  
 </body>
 </html>
