--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,20 +1,36 @@
  .img-responsive{
-  max-height: 300px;
-  z-index: -1;
+  max-height: 275px;
+
 }
-/* 
-.photo, .description{  
-  margin: 50px;
-  height: 300px;
-  width: 100%;
-  right: 0;
-  padding: 15px;
-  
-} */
+
+body {
+  background: lightblue;
+}
+
+.container {
+  width: 800px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom:10px;
+ }
+
 .photo{
   width: 100%;
-  float: left;
   border-style: solid;
-  border-width: 1px; 
-  min-height: 510px;
+  border-width: 2px; 
+  /* height: 410px; */
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+img{
+  width:100%;
+  height: 400px;
+}
+
+#img{
+  min-height: 300px;
+
 }
