--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,36 +1,43 @@
  .img-responsive{
-  max-height: 275px;
+  max-height: 295px;
 
 }
 
 body {
   background: lightblue;
+  text-align: center;
 }
 
 .container {
-  width: 800px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-bottom:10px;
+  width: 100%;
+  /* padding-right: 5px;
+  padding-left: 5px;
+  padding-bottom:5px; */
  }
 
-.photo{
-  width: 100%;
-  border-style: solid;
-  border-width: 2px; 
-  /* height: 410px; */
-  margin-top: 15px;
-  margin-bottom: 10px;
-}
-
 img{
-  width:100%;
-  height: 400px;
+  width:95%;
+  height: 290px;
+  /* border-style: solid;
+  border-width: 2px;  */
 }
 
 #img{
   min-height: 300px;
 
+
+}
+.col-md-4{
+  min-height: 300px;
+  border-style: solid;
+  border-width: 2px; 
+  padding: 1px;
+  
+}
+
+button{
+  display:inline-block;
+  padding: 5px,4px;
+  cursor: pointer;
+  
 }
