--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,12 +5,13 @@
 
 body {
   background: lightblue;
+  text-align: center;
 }
 
 .container {
-  width: 800px;
-  padding-right: 15px;
-  padding-left: 15px;
+  width: 900px;
+  padding-right: 10px;
+  padding-left: 10px;
   margin-right: auto;
   margin-left: auto;
   padding-bottom:10px;
